# django-oauth2-provider

./: Dockerfile  Jenkinsfile  README.rst  aws_identity_example.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
docs/: changes.rst  getting_started.rst
provider/: __init__.py  constants.py  forms.py  utils.py  views.py
provider/oauth2/: admin.py  apps.py  backends.py  forms.py  models.py  signals.py  views.py
provider/oauth2/fixtures/: test_oauth2.json
provider/oauth2/management/commands/: oauth2_migrate_hashed_tokens.py
provider/oauth2/migrations/: 0004_awsaccount.py  0005_pkce.py  0006_clientsecrets.py  0007_secret_tokens.py
provider/oauth2/tests/: test_middleware.py  test_models.py  test_views.py
provider/tests/: test_utils.py
tests/: settings.py
